# bp_system

./: .gitignore  CMakeLists.txt  LICENSE.LGPL  README.md  main.cpp
_config/: b_simple_node_a.json  behavior_hub.json  p_simple_node_a.json  physics_hub.json
_extra/msgpack-cpp/msgpack/: sysdep.hpp
bp_system/_common/: node.cpp  node.hpp  node_cmd.hpp  node_config.hpp  node_list.hpp  node_state.hpp  node_state_machine.hpp  node_util.cpp  node_util.hpp  p_node_cmd.hpp  p_node_state.hpp  stacker.hpp
bp_system/_common/comm/: comm_udp.cpp  comm_udp.hpp
bp_system/b_system/: b_hub.cpp  b_hub.hpp  b_hub_state.hpp  b_node.cpp  b_node.hpp  hub.cpp  hub.hpp  node_store.cpp  node_store.hpp
bp_system/b_system/b_hub_cmd/: b_hub_cmd_list.hpp  cmd_end_node.hpp  cmd_pick_shared_ptr.hpp  cmd_start_node.hpp
bp_system/b_system/b_hub_sys_cmd/: b_hub_sys_cmd_list.hpp
bp_system/b_system/b_node_cmd/: cmd_example_servo.hpp
bp_system/b_system/b_node_state/: state_example_servo.hpp
bp_system/b_system/b_node_sys_cmd/: b_node_sys_cmd_list.hpp  (+1 more)
bp_system/p_system/: p_hub.cpp  p_hub.hpp  p_hub_state.hpp  p_node.cpp  p_node.hpp
doc/: example_sub_pub.md
doc/design/: abstruct_of_b_system.md  memo01.md
example_node/config/: b_example_pub_control.json  b_example_sub_servo.json  b_simple_node_a.json  b_simple_node_b.json
example_node/node/: b_example_pub_control.cpp  b_example_pub_control.hpp  b_example_sub_servo.cpp  b_example_sub_servo.hpp  b_simple_node_a.cpp  b_simple_node_a.hpp  b_simple_node_b.cpp  b_simple_node_b.hpp  dummy_servo_node.cpp  dummy_servo_node.hpp
(+16 files in other folders)
